feat: 重複可能性のある画像をブラウザにサムネイル表示する機能を追加
重複画像の探索結果をブラウザにサムネイル表示する機能を追加しました。
表示した画像に対するアクションは、まだこれからです。
